Closed Bug 167022 Opened 22 years ago Closed 22 years ago

Color prefs broken

Categories

(SeaMonkey :: Preferences, defect, P1)

x86
All
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.2alpha

People

(Reporter: mozilla2007, Assigned: aaronlev)

References

Details

(Keywords: regression)

Attachments

(1 file)

I'd like to have a pref, to change the background-color of type-ahead find (this
kind of green doesn't please me), maybe with the same color-syntax like in html ...
Actually there's a pref that exists for this, but the color prefs were broken.
Strangely, this is the first time anyone noticed.

The pref is:
  "ui.textSelectBackgroundAttention"
Blocks: isearch
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: regression
Priority: -- → P1
Summary: [RFE] Add pref, to select background-color of type ahead find → Color prefs broken
Target Milestone: --- → mozilla1.2alpha
So put this line in your prefs.js file:
user_pref("ui.textSelectBackgroundAttention", "#rrggbb");

where rrggbb is the hex color you want.
Note: bug summary has been changed.
Reported was actually just asking for a color pref for type ahead find.
Comment on attachment 98097 [details] [diff] [review]
Puts commas where they should have been in array of strings, moves down section of code so we can get cached color pref.

r=caillon
Attachment #98097 - Flags: review+
Comment on attachment 98097 [details] [diff] [review]
Puts commas where they should have been in array of strings, moves down section of code so we can get cached color pref.

sr=brendan@mozilla.org, watch out for implicit string literal concatenation
without commas!

/be
Attachment #98097 - Flags: superreview+
Comment on attachment 98097 [details] [diff] [review]
Puts commas where they should have been in array of strings, moves down section of code so we can get cached color pref.

a=asa (on behalf of drivers) for checkin to 1.2a
Attachment #98097 - Flags: approval+
Blocks: 1.2a
checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: XP Apps → Preferences
QA Contact: paw → sairuh
see also bug 158754. rs vrfy.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: