Bug 167022. Color prefs broken. r=caillon, sr=brendan, a=asa