widget/src/xpwidgets/nsXPLookAndFeel.cpp
@@ -128,8 +128,8 @@ char* nsXPLookAndFeel::sColorPrefs[] =
   "ui.textForeground",
   "ui.textSelectBackground",
   "ui.textSelectForeground",
-  "ui.textSelectBackgroundDisabled"
-  "ui.textSelectBackgroundAttention"
+  "ui.textSelectBackgroundDisabled",
+  "ui.textSelectBackgroundAttention",
   "ui.activeborder",
   "ui.activecaption",
   "ui.appworkspace",
@@ -364,21 +364,6 @@ NS_IMETHODIMP nsXPLookAndFeel::GetColor(const nsColorID aID, nscolor &aColor)
   if (!sInitialized)
     Init();
 
-  // There are no system color settings for these, so set them manually
-  if (aID == eColor_TextSelectBackgroundDisabled) {
-    // This is used to gray out the selection when it's not focused
-    // Used with nsISelectionController::SELECTION_DISABLED
-    aColor = NS_RGB(0xb0, 0xb0, 0xb0);
-    return NS_OK;
-  }
-
-  if (aID == eColor_TextSelectBackgroundAttention) {
-    // This makes the selection stand out when typeaheadfind is on
-    // Used with nsISelectionController::SELECTION_ATTENTION
-    aColor = NS_RGB(0x38, 0xd8, 0x78);
-    return NS_OK;
-  }
-
   // define DEBUG_SYSTEM_COLOR_USE if you want to debug system color
   // use in a skin that uses them.  When set, it will make all system
   // color pairs that are appropriate for foreground/background
@@ -462,6 +447,21 @@ NS_IMETHODIMP nsXPLookAndFeel::GetColor(const nsColorID aID, nscolor &aColor)
 
   if (IS_COLOR_CACHED(aID)) {
     aColor = sCachedColors[aID];
+    return NS_OK;
+  }
+
+  // There are no system color settings for these, so set them manually
+  if (aID == eColor_TextSelectBackgroundDisabled) {
+    // This is used to gray out the selection when it's not focused
+    // Used with nsISelectionController::SELECTION_DISABLED
+    aColor = NS_RGB(0xb0, 0xb0, 0xb0);
+    return NS_OK;
+  }
+
+  if (aID == eColor_TextSelectBackgroundAttention) {
+    // This makes the selection stand out when typeaheadfind is on
+    // Used with nsISelectionController::SELECTION_ATTENTION
+    aColor = NS_RGB(0x38, 0xd8, 0x78);
     return NS_OK;
   }
 
